
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2003-03-06 DP  1.6.3  Remember the server's SSL mode property correctly.
2007-03-05 DP  1.6.3  Prevent the RULE privilege becoming re-enabled for tables
                      on PostgreSQL 8.2+, per Erwin.
2007-03-05 DP  1.8.0  Add support for packages on EnterpriseDB.
2007-03-05 DP  1.6.3  Minor fix for edb/spl functions.
2007-03-02 DP  1.6.3  Fix procedure support on EnterpriseDB AS81.
2007-03-02 DP  1.8.0  Add support for public synonyms on EnterpriseDB.
2007-03-02 DP  1.8.0  Use pg_statindex (if available) to optionally display
                      additional index statistics on a per-table basis. Also
                      works for index-constraints [Guillaume Lelarge]
2007-03-01 DP  1.8.0  Display catalogs separately from schemas, and don't
                      treat them as system objects any longer (they can be
                      hidden using the display options).
2007-02-27 DP  1.8.0  Allow install time re-branding. This allows rebranded
                      versions of pgAdmin to be distributed without code
                      modifications, but with references to the original
                      pgAdmin being displayed instead. Also add support for
                      shaped splash screens.
2007-02-26 DP  1.8.0  Add a set of options to allow the user to hide selected
                      object types from the treeview. Note that the new default
                      settings will hide less commonly used objects such as
                      casts, languages, aggregates, operators etc.
2007-02-23 DP  1.6.3  Fix a rare bug in the Edit Grid which could cause a crash