@@ -35,7 +35,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
-2003-03-06 DP  1.6.3  Remember the server's SSL mode property correctly.
+2007-03-06 DP  1.6.3  Fix a bug that prevented adding new nodes to a Slony 
+                      cluster, per Duncan Beeby.
+2007-03-06 DP  1.6.3  Remember the server's SSL mode property correctly.
 2007-03-05 DP  1.6.3  Prevent the RULE privilege becoming re-enabled for tables
                       on PostgreSQL 8.2+, per Erwin.
 2007-03-05 DP  1.8.0  Add support for packages on EnterpriseDB.
